--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -60,6 +60,7 @@
             else
             {
                 showError = true;
+                StateHasChanged();
             }
         }
     }
