Correction in class name

--- a/Components/LocationForecast/LocationForecast.razor
+++ b/Components/LocationForecast/LocationForecast.razor
@@ -50,7 +50,7 @@
             <div class="col-12 col-md-7">
                 <WeeklyForecast ForecastDays="@forecast.Forecast.Forecastday" />
 
-                <TodaysHighlights Forecast="@forecast.Current" />
+                <TodaysHighlights Current="@forecast.Current" />
             </div>
         </div>
     </section>
