--- a/Components/TodaysHighlights.razor
+++ b/Components/TodaysHighlights.razor
@@ -4,7 +4,7 @@
         <div class="card">
             <div class="card-body">
                 <small class="text-secondary">Humidity:</small>
-                <h5>@Forecast.Humidity <small class="text-secondary">%</small></h5>
+                <h5>@Current.Humidity <small class="text-secondary">%</small></h5>
             </div>
         </div>
     </div>
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-body">
                 <small class="text-secondary">UV Index:</small>
-                <h5>@Forecast.UV</h5>
+                <h5>@Current.UV</h5>
             </div>
         </div>
     </div>
@@ -20,7 +20,7 @@
         <div class="card">
             <div class="card-body">
                 <small class="text-secondary">Wind Speed:</small>
-                <h5>@Forecast.Wind_Kph <small class="text-secondary">kph</small></h5>
+                <h5>@Current.Wind_Kph <small class="text-secondary">kph</small></h5>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="card">
             <div class="card-body">
                 <small class="text-secondary">Pressure:</small>
-                <h5>@Forecast.Pressure_Mb <small class="text-secondary">mb</small></h5>
+                <h5>@Current.Pressure_Mb <small class="text-secondary">mb</small></h5>
             </div>
         </div>
     </div>
@@ -36,5 +36,5 @@
 
 @code
 {
-    [Parameter] public Forecast Forecast { get; set; }
+    [Parameter] public Current Current { get; set; }
 }
